<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_3x3">start 3x3</string>
    <string name="start_4x4">start 4x4</string>
    <string name="exit">exit</string>
    <string name="choose_player_names">Choose player names</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="play_vs_computer">Play vs Computer</string>
    <string name="start">Start</string>
    <string name="your_turn">Your turn %s</string>
</resources>
